--- a/.dockerignore
+++ b/.dockerignore
@@ -5,6 +5,6 @@ venv
 Gateway API.postman_collection.json
 Dockerfile
 .dockerignore
-*/db.sqlite3
+db.sqlite3
 *_pb2*
-*/__pycache__
+**/__pycache__
